# open-sciences

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .invenio  .prettierignore  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  ERROR_HANDLING_README.md  Makefile  Pipfile  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.docs.yaml  docker-compose.full.yml  docker-compose.openscience-tools.kind.yml  docker-compose.openscience-tools.yml  docker-compose.scripts.kind.yml  docker-compose.scripts.yml  docker-compose.yml  docker-services.yml  invenio.cfg  invenio.cfg.template  test-kind.csv
.gitlab/: Dockerfile.ost  Dockerfile.publish  README.md
app_data/: pages.yaml
app_data/pages/: about.html
assets/js/invenio_app_rdm/: inject-advanced-search-link.js
assets/templates/custom_fields/: index.js
cms/: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml
cms/drupal/: .gitignore  composer.json  deploy.sh  patches.lock.json
cms/drupal/patches/: core-hash-long-table-aliases-6379.diff
cms/httpd/: cms-subpath.conf
deploy/: .dockerignore  .env.example  .env.local  Dockerfile  Dockerfile.cms  Dockerfile.cms.dockerignore  Makefile  README.md  backup-cronjob.yaml  cms-init.yaml  cms-services.yaml  docker-entrypoint.sh  external-services.yaml  k8s-env-injection-examples.yaml  minio-init.yaml  values-staging.yaml  values.yaml
deploy/scripts/: backup-retention.sh  backup.sh  install-k3s.sh  restore.sh  retention.sh  setup-tls.sh
docker/nginx/conf.d/: default.conf
docker/postgres/: init-cms-database.sh
docs/: DEPLOYMENT.md  Dockerfile  Dockerfile.puppeteer  entrypoint.sh  mkdocs.yml  print.js  requirements.txt
docs/docs/: deployment.md  index.md  kubernetes.md  readme.md
docs/docs/javascripts/: tables.js
docs/docs/stylesheets/: extra.css
k8s/: DEPLOYMENT_STRATEGY.md  Dockerfile  KIND_GUIDE.md  Makefile  README.md  complete-invenio.yaml  external-services.yaml  kind-config.yaml  setup.sh  simple-test.yaml  unesco-rdm-final.yaml  values-external-services.yaml  values-kind-minimal.yaml  values-kind.yaml  values-production.yaml  values-unesco.yaml  values.yaml
openscience-tools/: .dockerignore  .gitlab-ci.yml  Dockerfile  INSTALL.md  MANIFEST.in  MIGRATION_GUIDE.md  PACKAGE_GUIDE.md  README.md  main.py  pyproject.toml  setup.py  setup_env.py
openscience-tools/openscience_tools/: cli.py
openscience-tools/openscience_tools/sources/: __init__.py
openscience-tools/openscience_tools/sources/lens/: main.py
openscience-tools/openscience_tools/sources/lens/mappers/: custom.py  standard.py
openscience-tools/openscience_tools/tools/: cleanup.py
openscience-tools/src/: __init__.py  invenio_client.py
openscience-tools/src/sources/: README.md
openscience-tools/src/sources/csv/: README.md  __main__.py  importer.py  reader.py
openscience-tools/src/sources/lens/: reader.py
openscience-tools/src/sources/zenodo/: __main__.py  fetcher.py  main.py  mapper.py
openscience-tools/src/tools/: cleanup.py  search.py  stats.py  view.py
openscience_tools/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  setup_env.py
openscience_tools/openscience_tools/: __init__.py  cli.py  invenio_client.py
openscience_tools/openscience_tools/sources/lens/: base.py  config.py  importer.py  main.py
openscience_tools/openscience_tools/sources/lens/examples/: __init__.py  batch_import.py  delete_example.py  main.py  search_example.py  update_example.py
openscience_tools/openscience_tools/sources/lens/mappers/: custom.py  related.py  standard.py
openscience_tools/openscience_tools/tools/: __init__.py  cleanup.py  cli.py  export.py  patch_affiliation_region.py  search.py  stats.py  view.py
openscience_tools/tests/: README.md  conftest.py  test_client.py  test_sdk_integration.py  test_sdk_unit.py
openscience_tools/tests/sources/: __init__.py
openscience_tools/tests/sources/lens/: README.md  __init__.py  conftest.py  test_lens.py
scripts/: Dockerfile  README.md  requirements.txt  setup_env.py
scripts/config/: .env.example  .env.kind
scripts/data/: README.md  publications.csv  sample_records.csv
scripts/data/lens.org/: publications.json
scripts/examples/: create_record.py  debug_lens_authors.py  delete_all_records.py  get_statistics.py  import_from_csv.py  import_from_lens.py  import_from_zenodo.py  invenio_cli.py  search_records.py  test_lens_mapping.py  test_publish.py  test_publish_debug.py  test_publish_full.py  test_simple.py  view_record_json.py
scripts/src/: invenio_client.py
scripts/src/lens_org/: __init__.py  config.py  importer.py
scripts/src/sources/: README.md
scripts/src/tools/: README.md  cli.py
site/: setup.cfg
site/my_site/: __init__.py  admin.py  blueprints.py  cli.py  constants.py  error_handlers.py  ext.py  views.py  webpack.py
site/my_site/alembic/: 00000000_create_my_site_branch.py  20251205_154517_create_cms_tables.py  20251209_cms_create_table.py  __init__.py
site/my_site/api/: __init__.py  cms.py  export.py  filters.py  lens_proxy.py  patch_regions.py  patch_resource_types.py  reindex.py  search.py  statistics.py  update_fields.py  views.py
site/my_site/filters/: __init__.py  affiliation.py  affiliation_region.py  author.py  base.py  country.py  field_of_study.py  funding.py  keyword.py  open_access.py  resource_type.py  subject.py  year.py
site/my_site/fixtures/: __init__.py  cms.py
site/my_site/models/: __init__.py  cms.py
site/my_site/services/: __init__.py  statistics_service.py
site/my_site/statistics/: __init__.py  statistics.py
site/my_site/tools/: __init__.py  migrate_resource_types.py  patch_affiliation_region.py  update_custom_fields.py
site/my_site/views/: __init__.py  cms.py  dashboard.py  pls.py  statistics.py
static/css/: custom-facets.css  frontpage.css  lens-custom-fields.css  static-pages.css
static/js/: cms-api.js
static/js/invenio_app_rdm/: advanced-search-builder.js
templates/semantic-ui/: page.html
templates/semantic-ui/invenio_administration/: index.html
(+729 files in other folders)
